 * Removed support for SDL 1.2. SDL 2 is now the only supported version.
 * Terrains:
   * Changed terrain code of Desert Mountains from Mdy to Mdd.
 * Editor:
   * Allow to set special locations in the editor which can then be read by wml.
 * User Interface:
   * Various design improvements to GUI2 widgets
   * New simpler GUI2 loading screen
   * New colored cursor graphics
   * Fixed Observers icon appearing behind other top bar items in MP games on
     horizontal UI resolutions < 1024 (bug #24455).
   * Fixed ToD schedule progress indicator appearing behind other top bar items
     on vertical UI resolutions < 600.
   * Improved the dialog for choosing what to do when a player leaves in
     multiplayer.
   * The side overview now also shows allied human sides in sp even if
     they aren't discovered yet
   * Added an option to disable the loadingscreen animation since it caused
     bugs in some configurations.
 * WML engine:
   * Add color= attribute to [message].
   * Fix some issues with [foreach]
   * Fix some issues with backstab-like weapon specials
   * Support [effect]times=<integer>
   * Add highlight=yes|no to [scroll_to], [scroll_to_unit], [message]
     Defaults to no in the first two cases, yes in the third
     If yes, the target hex is outlined.
   * New ~SCALE_INTO(w,h) IPF which preserves aspect ratio, using bilinear
     interpolation scaling.
   * New ~SCALE_INTO_SHARP(w,h) IPF which preserves aspect ratio, using
     nearest neighbor scaling.
   * Support delayed_variable_substitution= in [on_undo], [on_redo]
     Note that this means $unit.x and $unit.y may not reflect the unit's
     true location, so using [unstore_unit] on $unit may have unexpected effects.
     This applies to $second_unit too. The $x1, $y1, $x2, $y2 variables work fine
     though, so in most cases they can be used instead. Anything else in $unit
     or $second_unit is also fine.
   * formula= in SUF can now reference $other_unit via the formula variable "other"