@@ -14,6 +14,8 @@ Version 1.13.4+dev:
      Portuguese, RACV, Russian, Scottish Gaelic, Spanish.
 
  * User interface:
+   * Fixed Mage of Light halo appearing in the top-left corner of the screen
+     while the mage is moving (bug #23712).
    * Fixed Observers icon appearing behind other top bar items in MP games on
      horizontal UI resolutions < 1024 (bug #24455).
    * Fixed ToD schedule progress indicator appearing behind other top bar items
