@@ -26,6 +26,8 @@ Version 1.13.4+dev:
    * Various design improvements to GUI2 widgets
    * New simpler GUI2 loading screen
    * New colored cursor graphics
+   * Fixed Mage of Light halo appearing in the top-left corner of the screen
+     while the mage is moving (bug #23712).
    * Fixed Observers icon appearing behind other top bar items in MP games on
      horizontal UI resolutions < 1024 (bug #24455).
    * Fixed ToD schedule progress indicator appearing behind other top bar items
